# substrait-validator

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  buf.work.yaml  pyproject.toml
c/: CMakeLists.txt  Cargo.toml  README.md  build.rs
c/src/: lib.rs
c/tests/: test.cc
derive/: Cargo.toml
derive/src/: lib.rs
playground/substrait-playground/: Cargo.toml
playground/substrait-playground/src/: lib.rs
py/: .gitignore  Cargo.toml  README.md  build.rs  prepare_build.py  pyproject.toml
py/src/: lib.rs
py/substrait_validator/: __init__.py
py/substrait_validator_build/: __init__.py
py/tests/: data.py  test_api.py  test_cli.py
rs/: Cargo.toml  README.md  build.rs
rs/antlr/: .gitignore  README.md  antlr.py  generate.py
rs/src/: .gitignore  lib.rs
rs/src/export/: mod.rs  proto.rs
rs/src/export/html/: mod.rs  style.css
rs/src/input/: config.rs  proto.rs  traits.rs  yaml.rs
rs/src/output/: comment.rs  data_type.rs  diagnostic.rs  extension.rs  meta_type.rs  mod.rs  parse_result.rs  path.rs  primitive_data.rs  tree.rs  version.rs
rs/src/output/extension/: mod.rs  namespace.rs  reference.rs
rs/src/output/extension/simple/: common.rs  function.rs  mod.rs  module.rs  type_class.rs  type_variation.rs
rs/src/output/type_system/: mod.rs
rs/src/output/type_system/data/: class.rs  mod.rs  parameter.rs  type.rs  variation.rs
rs/src/output/type_system/meta/: context.rs  function.rs  mod.rs  pattern.rs  program.rs  type.rs  value.rs
rs/src/parse/: context.rs  mod.rs  plan.rs  sorts.rs  traversal.rs  types.rs
rs/src/parse/expressions/: conditionals.rs  functions.rs  literals.rs  misc.rs  mod.rs  subqueries.rs
rs/src/parse/expressions/references/: mask.rs  mod.rs  scalar.rs
rs/src/parse/extensions/: advanced.rs
rs/src/parse/extensions/simple/: builder.rs  common.rs  derivations.ebnf  function_decls.rs  functions.rs  mod.rs  modules.rs  stdlib.rs  type_classes.rs  type_decls.rs  type_variation_decls.rs  type_variations.rs  yaml.rs
rs/src/parse/extensions/simple/derivations/: SubstraitType.g4  mod.rs  substraittypelexer.rs  substraittypeparser.rs  (+1 more)
rs/src/parse/relations/: aggregate.rs  common.rs  cross.rs  fetch.rs  filter.rs  join.rs  mod.rs  project.rs  read.rs  set.rs
rs/src/resources/: substrait-version
rs/src/util/: mod.rs  string.rs
tests/: Cargo.toml  README.md  runner.py
tests/src/: find_protoc.rs  runner.rs
tests/tests/expressions/conditionals/: if-else.yaml  matches-scalar.yaml  matches-vector.yaml  switch.yaml
tests/tests/expressions/field-refs/: mask-ref.yaml  outer-ref.yaml  scalar-list-ref.yaml  scalar-map-ref.yaml  scalar-struct-ref.yaml
tests/tests/expressions/literals/: binary.yaml  boolean.yaml  date.yaml  decimal.yaml  fixed_binary.yaml  fixed_char.yaml  fp32.yaml  fp64.yaml  i16.yaml  i32.yaml  i64.yaml  i8.yaml  interval_day.yaml  interval_year.yaml  list.yaml  map.yaml  string.yaml  struct.yaml  time.yaml  timestamp.yaml  timestamp_tz.yaml  uuid.yaml  var_char.yaml
tests/tests/expressions/subqueries/: comparison.yaml  in-predicate.yaml  scalar.yaml  set.yaml
tests/tests/extensions/advanced/: enhancement-not-declared.yaml  enhancement.yaml  missing-declaration.yaml  optimization-not-declared.yaml  optimization.yaml  unused-declaration.yaml
tests/tests/extensions/simple/type_class/: core_yamls.yaml
tests/tests/relations/aggregate/: measure-and-group.yaml  measure.yaml  missing-set-or-measure.yaml  multi-set-reused.yaml  multi-set.yaml  single-set-one-expr.yaml  single-set-two-expr.yaml  single-set-zero-expr.yaml
tests/tests/relations/common/: direct.yaml  emit-basic.yaml  emit-empty.yaml  emit-out-of-range.yaml  enhancement.yaml  hints-functional.yaml  hints.yaml  omitted.yaml  optimization.yaml
tests/tests/relations/cross/: basic.yaml  unknown-schema.yaml
tests/tests/relations/extensions/: leaf-missing-detail.yaml  leaf.yaml  multi-missing-detail.yaml  multi-without-inputs.yaml  multi.yaml  single-missing-detail.yaml  single.yaml
tests/tests/relations/fetch/: all.yaml  discard-first-n.yaml  discard-first.yaml  n-rows.yaml  single-row.yaml
tests/tests/relations/filter/: basic.yaml  missing.yaml  not-bool.yaml  nullability-bool-expression.yaml  nullable.yaml
tests/tests/relations/join/: anti.yaml  expr-not-bool.yaml  filter-not-bool.yaml  filter-range.yaml  filter.yaml  inner.yaml  left.yaml  literal-expr.yaml  missing-expr.yaml  missing-type.yaml  outer.yaml  right.yaml  semi.yaml  single.yaml
tests/tests/relations/project/: dependent.yaml  missing.yaml  multiple.yaml  single.yaml
tests/tests/relations/read/extension-table/: basic.yaml
tests/tests/relations/read/file-table/: arrow.yaml  dwrf.yaml  extension-format.yaml  missing-format.yaml  orc.yaml  parquet.yaml  partial.yaml  uri-validation.yaml
tests/tests/relations/read/filter-project/: both.yaml  filter-not-bool.yaml  projection-multiple.yaml  projection-singular.yaml
tests/tests/relations/read/named-table/: basic.yaml  missing.yaml  multiple.yaml
tests/tests/relations/read/schema/: missing-names.yaml  missing-schema.yaml  nullable.yaml  wrong-name-count.yaml
tests/tests/relations/read/virtual-table/: basic.yaml  empty.yaml  row-field-count-mismatch.yaml  row-type-mismatch.yaml
tests/tests/relations/root/: missing.yaml  multiple.yaml  with-names-nested.yaml  with-names.yaml  without-names-nested.yaml  without-names.yaml
tests/tests/relations/set/: different-inputs.yaml  insufficient-inputs.yaml  missing-op.yaml  three-inputs.yaml  two-inputs.yaml
tests/tests/relations/sort/: coalesce.yaml  key_cmp.yaml  key_lt.yaml  missing-expr.yaml  missing-sort-kind.yaml  missing.yaml  multiple.yaml  single.yaml
tests/tests/tpc-h/: tpc-h01.yaml  tpc-h02.yaml  tpc-h03.yaml  tpc-h04.yaml  tpc-h05.yaml  tpc-h06.yaml  tpc-h07.yaml  tpc-h08.yaml  tpc-h09.yaml  tpc-h10.yaml  tpc-h14.yaml  tpc-h19.yaml
tests/tests/version/: current-version.yaml  incompatible-version.yaml  invalid-hash.yaml  invalid-version.yaml  missing-producer-id.yaml  missing.yaml  unknown-version.yaml  valid-hash.yaml
(+28 files in other folders)
