[package]
name = "substrait-validator-c"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[features]
# Build and vendor protoc from source. See also rs/Cargo.toml.
protoc = ["substrait-validator/protoc"]

[build-dependencies]
cbindgen = "0.28.0"

[dependencies]
substrait-validator = { path = "../rs", version = "0.1.3" }
libc = "0.2"
thiserror = "2.0"
once_cell = "1.21"
