[package]
name = "substrait-validator-c"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[features]
# Build and vendor protoc from source. See also rs/Cargo.toml.
protoc = ["substrait-validator/protoc"]

[build-dependencies]
cbindgen = "0.29.0"

[dependencies]
substrait-validator = { workspace = true }
libc = "0.2"
thiserror = "2.0"
once_cell = "1.21"
