[package]
name = "substrait-validator-derive"
description = "Procedural macros for substrait-validator"
homepage = "https://substrait.io/"
repository = "https://github.com/substrait-io/substrait-validator"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
heck = "0.5"
