[package]
name = "substrait-validator-py"
version = "0.1.1"
edition = "2018"
license = "Apache-2.0"
include = [
    "/LICENSE",
    "/README.md",
    "/build.rs",
    "/pyproject.toml",
    "/proto",
    "/text",
    "/src",
    "/substrait_validator/*.py",
    "/substrait_validator_build/*.py",
    "/tests",
]

[lib]
crate-type = ["cdylib"]

# NOTE: we need to set the crate name to substrait_validator, because maturin
# seems to insist on also using this name for the Python module, and it'd be
# rather unfortunate if the Python module would need to be named
# substrait_validator_py...
name = "substrait_validator"

# cargo doc especially can't deal with name collisions.
doc = false

[dependencies]
substrait-validator = { path = "../rs", version = "0.1.1" }
pyo3 = { version = "0.22.6", features = ["extension-module"] }

[build-dependencies]
prost-build = "0.13.3"
pyo3-build-config = "0.22.2"
walkdir = "2"
dunce = "1"
