[package]
name = "substrait-validator-py"
version = "0.1.4"
edition = "2018"
license = "Apache-2.0"
include = [
    "/LICENSE",
    "/README.md",
    "/build.rs",
    "/pyproject.toml",
    "/proto",
    "/text",
    "/src",
    "/substrait_validator/*.py",
    "/substrait_validator_build/*.py",
    "/tests",
]

[features]
# Build and vendor protoc from source. See also rs/Cargo.toml.
protoc = ["dep:protobuf-src", "substrait-validator/protoc"]

[lib]
crate-type = ["cdylib"]

# NOTE: we need to set the crate name to substrait_validator, because maturin
# seems to insist on also using this name for the Python module, and it'd be
# rather unfortunate if the Python module would need to be named
# substrait_validator_py...
name = "substrait_validator"

# cargo doc especially can't deal with name collisions.
doc = false

[dependencies]
substrait-validator = { path = "../rs", version = "0.1.4" }
pyo3 = { version = "0.22.5", features = ["extension-module"] }

[build-dependencies]
prost-build = "0.14.0"
pyo3-build-config = "0.24.2"
walkdir = "2"
dunce = "1"

# Used in the 'protoc' feature.
protobuf-src = { version = "2.1", optional = true }