[package]
name = "substrait-validator-py"
version.workspace = true
edition.workspace = true
license.workspace = true
include = [
    "/LICENSE",
    "/README.md",
    "/build.rs",
    "/pyproject.toml",
    "/proto",
    "/text",
    "/src",
    "/substrait_validator/*.py",
    "/tests",
]

[features]
# Build and vendor protoc from source. See also rs/Cargo.toml.
protoc = ["dep:protobuf-src", "substrait-validator/protoc", "substrait-validator-build/protoc"]

[lib]
crate-type = ["cdylib"]

# NOTE: we need to set the crate name to substrait_validator, because maturin
# seems to insist on also using this name for the Python module, and it'd be
# rather unfortunate if the Python module would need to be named
# substrait_validator_py...
name = "substrait_validator"

# cargo doc especially can't deal with name collisions.
doc = false

[dependencies]
substrait-validator = { workspace = true }
pyo3 = { version = "0.28.3", features = ["extension-module"] }

[build-dependencies]
substrait-validator-build = { workspace = true }
prost-build = "0.14.3"
pyo3-build-config = "0.27.2"
walkdir = "2"
dunce = "1"

# Used in the 'protoc' feature.
protobuf-src = { version = "2.1", optional = true }
