[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"

[project]
name = "substrait-validator"
version = "0.1.4"
description = "Validator for Substrait query plans"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["substrait"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["protobuf >3.19.3,<7", "click >= 8", "pyyaml >= 6", "jdot >= 0.5"]

[project.optional-dependencies]
test = ["pytest < 10.0.0", "toml >= 0.10.2"]

[project.urls]
homepage = "https://substrait.io/"
repository = "https://github.com/substrait-io/substrait-validator"

[project.scripts]
substrait-validator = "substrait_validator:cli"

[tool.maturin]
python-source = "."
python-packages = ["substrait_validator", "tests"]
