[package]
name = "substrait-validator"
description = "Substrait validator"
homepage = "https://substrait.io/"
repository = "https://github.com/substrait-io/substrait-validator"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
include = ["src", "build.rs", "README.md"]

[features]

# Enable to get some extra developer documentation from cargo doc. Be sure to
# use this with --document-private-items as well. Enabling this doesn't
# functionally change anything.
private_docs = []

# Build and vendor protoc from source. This is useful to have a consistent
# version of protoc across platforms/build systems. In particular, docs.rs uses
# it. We forward this to substrait-prost as well: its build script compiles its
# vendored protos and so needs protoc too, and a sibling crate's build script
# does not inherit the PROTOC environment variable we set for our own.
protoc = ["dep:protobuf-src", "substrait-prost/protoc"]

[dependencies]

# Prost is used to deal with protobuf serialization and deserialization.
prost = "0.14.4"
prost-types = "0.14.4"

# Pre-generated prost bindings for the canonical Substrait protobuf definitions
# (the `substrait` and `substrait.extensions` packages). We consume these types
# instead of compiling the core protobuf files ourselves. The `embed-descriptor`
# feature exposes the protobuf FileDescriptorSet, and the `reflect` feature adds
# `prost::Name` + `prost_reflect::ReflectMessage` impls to the generated types,
# which the validator consumes to introspect these foreign types at runtime.
substrait-prost = { version = "=0.87.0-alpha.4", features = ["embed-descriptor", "reflect"] }

# Runtime protobuf reflection. substrait-prost's types carry `ReflectMessage`
# (via its `reflect` feature); we use the trait, `DynamicMessage`, and the
# descriptor pool to enumerate fields for unknown-field detection. Must resolve
# to the same 0.16.x as substrait-prost so the `ReflectMessage` trait matches.
prost-reflect = "0.16"

# The validator-specific `substrait.validator` protobuf package is not provided
# by substrait-prost, so it is still generated locally with our own procedural
# macros (the ProtoMeta derive), which now emit reflection-based introspection.
substrait-validator-derive = { workspace = true }

# Google/protobuf has a funny idea about case conventions (it converts them all
# over the place) and prost remaps to Rust's conventions to boot. So, to
# recover the original names as much as possible, we need some case conversion
# of our own.
heck = "0.5"

# Used for dealing with deserializing the YAML extension files.
serde_yaml = "0.9"

# Provides the standard Substrait extension YAML files (resolved offline by URN)
# and the extension-file JSON schema, generated and published from the spec by
# substrait-packaging. Replaces the locally-bundled copies and the build-time
# URN registry.
substrait-extensions = "0.87.0-alpha.4"

# The schema for the extension files uses jsonschema syntax. The rust crate for
# schema validation with this format this uses serde_json types as input for
# both the schema and the input, so we need to depend on that as well, even
# though we don't actually do any JSON serialization and deserialization.
jsonschema = { version = "0.46", default-features = false }
serde_json = "1"

# Used for checking identifier syntax (could be removed if regexes don't end up
# being useful elsewhere too).
regex = "1.12"

# Used for the type derivation DSL. The generated parser is provided by the
# substrait-antlr crate (published from substrait-io/substrait-packaging from
# the spec's canonical grammar); antlr4rust is its runtime, used directly by our
# analysis glue as well.
antlr4rust = "0.5.2"
substrait-antlr = "0.87.0-alpha.4"

# Used for checking URI syntax.
uriparse = "0.6"

# Used for only compiling regexes and the extension file schema once.
once_cell = "1.21"

# Various small helper crates for the diagnostic/error enums.
thiserror = "2.0"
strum = "0.28"
strum_macros = "0.28"
num-traits = "0.2"
num-derive = "0.4"

# For intersperse().
itertools = "0.15"

# Glob patterns are used in the configuration structure and are used to
# syntax-check URI glob patterns in the Substrait plans.
glob = "0.3"

# Used for interpretation and conversion of various date/time-related literals
# in plans.
chrono = "0.4"

# Used for pretty-printing floating point literal values.
float-pretty-print = "0.1"

# Used by the HTML exporter.
base64 = "0.22"
percent-encoding = "2.3"

# Used for representing and checking Substrait versions.
semver = "1.0"

[build-dependencies]

# Used for generating Rust structs from the validator-specific protobuf
# definitions (the `substrait.validator` package).
prost-build = "0.14.4"

# Read at build time to decode substrait-prost's embedded FileDescriptorSet, from
# which we generate the introspection trait impls for the substrait-prost types.
substrait-prost = { version = "=0.87.0-alpha.4", features = ["embed-descriptor"] }
prost = "0.14.4"
prost-types = "0.14.4"

# Case conversion for reproducing prost's Rust identifier naming (module paths,
# field names, enum variants) from the protobuf descriptor.
heck = "0.5"

# Used in the 'protoc' feature.
protobuf-src = { version = "2.1", optional = true }

# Used to automatically find all protobuf files.
walkdir = "2"

[package.metadata.docs.rs]
features = ["protoc"]
