[package]
name = "test-runner"
version = "0.0.11"
edition = "2018"
license = "Apache-2.0"
default-run = "runner"

[[bin]]
name = "runner"
path = "src/runner.rs"

[[bin]]
name = "find_protoc"
path = "src/find_protoc.rs"

[dependencies]
substrait-validator = { path = "../rs", version = "0.0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
glob = "0.3"
rayon = "1.5"
protobuf-src = "1.1.0"
