[package]
name = "test-runner"
version = "0.1.4"
edition = "2018"
license = "Apache-2.0"
default-run = "runner"

[[bin]]
name = "runner"
path = "src/runner.rs"

[[bin]]
name = "find_protoc"
path = "src/find_protoc.rs"

[features]
# Build and vendor protoc from source. See also rs/Cargo.toml.
protoc = ["dep:protobuf-src", "substrait-validator/protoc"]

[dependencies]
substrait-validator = { path = "../rs", version = "0.1.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
glob = "0.3"
prost-build = "0.14.1"
rayon = "1.10"
# Used in the 'protoc' feature.
protobuf-src = { version = "2.1", optional = true }