[package]
name = "test-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "runner"

[[bin]]
name = "runner"
path = "src/runner.rs"

[[bin]]
name = "find_protoc"
path = "src/find_protoc.rs"

[features]
# Build and vendor protoc from source. See also rs/Cargo.toml.
protoc = ["dep:protobuf-src", "substrait-validator/protoc"]

[dependencies]
substrait-validator = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
glob = "0.3"
prost-build = "0.14.3"
rayon = "1.10"
# Used in the 'protoc' feature.
protobuf-src = { version = "2.1", optional = true }
