[package]
name = "substrait-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
prost = "0.11"
reqwest = "0.11"
serde_json = "1"
# substrait = { version = "0.2", features = ["pbjson"] }
substrait = { git = "https://github.com/mbrobbel/substrait-rs", branch = "pbjson", features = ["pbjson"] }
substrait-validator = { path = "../../rs" } # 0.0.8
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
